# sysmlv2-ls-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  codecov.yml  eslint.config.js  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  python-client.yml  release.yml  security-audit.yml
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/src/sysmlv2slclient/: __init__.py  _version.py  cli.py  client.py  directory.py  errors.py  models.py
clients/python/tests/: test_cli.py  test_client.py  test_directory.py  test_errors.py  test_models.py
clients/python/tests/live/: test_live_service.py
docs/: index.md  requirements.in  requirements.txt
docs/_data/: version.json
docs/adr/: 0001-docs-system.md
docs/architecture/: adapter-boundary.md  dto-contracts.md  request-limits.md  request-workspace.md
docs/clients/: index.md
docs/getting-started/: docker.md  local-dev.md  quickstart.md
docs/reference/: openapi.md
docs/service/: diagnostics.md  http-api.md  overview.md  request-limits.md  versioning.md
examples/: simple.sysml
examples/python/: README.md  validate_example.py
openapi/: service.v1.yaml
scripts/: check-jsdoc.mjs  check-python-docs.py  check-version.mjs  smoke-start.mjs
scripts/docs/: check-generated-docs.mjs  check-python-reference-rendering.mjs  check-secrets.mjs  generate-cli-docs.mjs  generate-openapi-docs.mjs  generate-typedoc.mjs  (+2 more)
src/: app.ts  contracts.ts  diagnostics.ts  limits.ts  server.ts  syside-languageserver-node.d.ts  sysml-validator.ts  uri.ts  version.ts
tests/: app.test.ts  contracts.test.ts  diagnostics.test.ts  limits.test.ts  openapi-contract.test.ts  sysml-validator.test.ts  uri.test.ts  version.test.ts
(+18 files in other folders)
